crates/specforge-cli/tests/snapshots/tests__parity__extensions__cli.snap
---
source: crates/specforge-cli/tests/parity.rs
expression: cli_snap
---
{
  "check": {
    "diagnostics": [],
    "ok": true
  },
  "config": {
    "extensions": [
      "@specforge/software",
      "@sdk/greet"
    ],
    "name": "demo",
    "registries": [
      {
        "alias": "offline",
        "default_registry": true,
        "url": "http://127.0.0.1:9/v1"
      }
    ],
    "spec_root": "spec",
    "version": "0.1.0"
  },
  "files": {
    ".specforge/extensions/@sdk/greet/extension.wasm": "<binary>",
    "spec/main.spec": "behavior alpha \"Alpha\" {\n  category \"core\"\n  contract \"The system MUST work\"\n}\n",
    "specforge.lock": "{\n  \"lockfile_version\": 1,\n  \"entries\": [\n    {\n      \"name\": \"@sdk/greet\",\n      \"version\": \"0.1.0\",\n      \"source\": \"local:[BLOB]\",\n      \"wasm_hash\": \"[SHA256]\"\n    }\n  ]\n}"
  },
  "ok": true,
  "payload": {
    "count": 2,
    "extensions": [
      {
        "entity_count": 0,
        "entity_kinds": [
          "greeting"
        ],
        "name": "@sdk/greet",
        "source": "local:[BLOB]",
        "status": "loaded",
        "validation_rules": 1,
        "version": "0.1.0"
      },
      {
        "entity_count": 1,
        "entity_kinds": [
          "behavior",
          "event",
          "invariant",
          "port",
          "type"
        ],
        "name": "@specforge/software",
        "source": "builtin",
        "status": "loaded",
        "validation_rules": 11,
        "version": "1.0.0"
      }
    ]
  }
}
