crates/specforge-cli/tests/snapshots/tests__parity__extensions__mcp.snap
---
source: crates/specforge-cli/tests/parity.rs
expression: mcp_snap
---
{
  "check": {
    "diagnostics": [],
    "ok": true
  },
  "config": {
    "extensions": [
      "@specforge/software"
    ],
    "name": "demo",
    "registries": [
      {
        "alias": "offline",
        "default_registry": true,
        "url": "http://127.0.0.1:9/v1"
      }
    ],
    "spec_root": "spec",
    "version": "0.1.0"
  },
  "files": {
    ".specforge/extensions/specforge_ext_product/extension.wasm": "<binary>",
    "spec/main.spec": "behavior alpha \"Alpha\" {\n  category \"core\"\n  contract \"The system MUST work\"\n}\n",
    "specforge.lock": "{\n  \"lockfile_version\": 1,\n  \"entries\": [\n    {\n      \"name\": \"specforge_ext_product\",\n      \"version\": \"local\",\n      \"source\": \"registry\",\n      \"wasm_hash\": \"[SHA256]\"\n    }\n  ]\n}"
  },
  "ok": true,
  "payload": {
    "entity_kinds_in_graph": [
      "behavior"
    ],
    "extensions": [
      {
        "entity_kinds": [
          "Behavior",
          "Invariant",
          "Event",
          "Type",
          "Port"
        ],
        "name": "@specforge/software",
        "status": "loaded",
        "validation_rules": 11,
        "version": "1.0.0"
      }
    ],
    "lock_file_entries": [
      {
        "name": "specforge_ext_product",
        "version": "local"
      }
    ]
  }
}
